# klein

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  Makefile  NOTICE  PROVENANCE.md  README.md  REUSE.toml  SECURITY.md  SUPPORT.md  TRADEMARKS.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  dependency-review.yml  docs.yml  nightly.yml  release.yml  reliability.yml  scorecard.yml  secret-scan.yml
docs/: api-stability.md  architecture.md  checkpoint-recovery.md  checkpoint-storage.md  cli-reference.md  compatibility.md  conf.py  configuration-reference.md  configuration.md  datastream-programming-guide.md  delivery-semantics.md  deployment.md  development.rst  driver-fault-tolerance.md  event-time.md  examples.md  faq.md  features.md  file-sinks.md  getting-started.md  glossary.md  index.md  installation.md  job-lifecycle.md  key-concepts.md  limitations.md  local_debug.rst  observability.md  operator-compatibility.md  operator-rescaling.md  package-structure.md  performance-tuning.md  private-api-inventory.md  production-readiness.md  production-streaming.md  ray-data-interop.md  ray-native-state.md  releasing.md  security.md  sql.md  (+4 more)
docs/_templates/: language-switcher.html
docs/api/: api.rst  config_options.rst  configurations.rst  connectors.rst  context.rst  datastream.rst  event_time.rst  exceptions.rst  formats.rst  jobs.rst  metrics.rst  observability.rst  partitioning.rst  ray_data.rst  redis.rst  resources.rst  runtime.rst  sinks.rst  sources.rst  sql.rst  state.rst  stateful_stream.rst  top_level.rst
docs/connectors/: canal.md  collections.md  console.md  custom.md  filesystem.md  iceberg.md  index.md  kafka.md  ray-data.md  ray-serve.md  redis.md  rocketmq.md
docs/locales/zh_CN/LC_MESSAGES/: api-stability.po  api.po  architecture.po  checkpoint-recovery.po  checkpoint-storage.po  cli-reference.po  compatibility.po  configuration-reference.po  configuration.po  connectors.po  datastream-programming-guide.po  delivery-semantics.po  deployment.po  faq.po  (+32 more)
examples/: quick_start.py  sql_batch.py  stateful_streaming.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts  vite-env.d.ts
frontend/src/common/: formatUtils.ts  links.ts
frontend/src/components/: Loading.tsx  StatusChip.tsx
frontend/src/service/: klein.ts  requestHandlers.ts
frontend/src/type/: klein.ts
requirements/: ci-constraints.txt  minimum-constraints.txt
scripts/: __init__.py  audit_dependencies.py  benchmark_data_plane.py  check_coverage_policy.py  check_dco.py  check_dependency_licenses.py  check_distribution.py  check_doc_translations.py
src/ray/klein/: __init__.py  cli.py  exceptions.py
tests/: __init__.py  component_suites.py  conftest.py  run_klein_1min_job.py
tests/architecture/: test_documentation_contract.py  test_lightweight_import.py  test_package_structure.py  test_test_suite_structure.py
tests/data/: csv_data1.csv  csv_data2.csv  csv_data3.csv
tests/fixtures/resource_plan/: pipeline.py  transforms.py
tests/integration/: conftest.py  test_actor_runtime.py  test_async_task.py  test_datastream_batch.py  test_datastream_bounded_source.py  test_datastream_interactive_mode.py  test_datastream_read.py  test_datastream_streaming.py  test_datastream_write.py  test_documented_examples.py  test_driver_survival.py  test_execution_mode_matrix.py  test_operator_chaining.py  test_ray_data.py  test_ray_serve.py  test_runtime_recovery.py  test_runtime_rescale.py  test_sql.py  test_sql_mode_matrix.py  test_sql_recovery.py  test_stateful_recovery.py  test_stateful_streaming.py  test_streaming_debug_mode.py  test_streaming_validate.py  test_union.py  test_union_batch.py
tests/integration/connectors/: test_console.py  test_file_sink.py  test_iceberg_sink.py  test_sql_sink.py
tests/plans/: invalid_name_resource_plan.json  invalid_node_resource_plan.json  missing_node_resource_plan.json  redundant_node_resource_plan.json  sample_resource_plan.json  valid_resource_plan.json
tests/state/: test_checkpoint_file_system.py  test_checkpoint_manifest.py  test_file_system_checkpoint_store.py  test_key_group.py  test_managed_state_backend.py  test_object_store_snapshot_cache.py  test_object_store_state_backend.py  test_operator_state_checkpoint.py  test_state_backend_factory.py  test_state_codec.py
tests/support/: __init__.py  assertions.py  debug_runtime.py  execution_graph.py  ray_data.py  streaming.py  terminal.py  waiting.py
tests/unit/: task_output_utils.py  test_actor.py  test_actor_status.py  test_async_base_worker.py  test_async_notify.py  test_async_ordered_runner.py  test_audit_dependencies.py  test_barrier_aligner.py  test_barrier_id_generator.py  test_check_dco.py  test_checkpoint_barrier_transport.py  test_checkpoint_coordinator_storage.py  test_checkpoint_domains.py  test_checkpoint_io.py  test_checkpoint_model.py  test_checkpoint_trigger.py  test_cli.py  test_collector_batcher.py  test_columnar_passthrough.py  test_compatibility_policy.py  test_configuration.py  test_configuration_properties.py  test_coordinated_input_gate.py  test_coverage_policy.py  test_dashboard_server.py  test_dashboard_state.py  test_data_plane_contracts.py  test_datastream_api_contracts.py  test_datastream_without_sink.py  test_delivery_journal.py  test_dependency_license_policy.py  test_duration.py  test_emit_pipeline.py  test_enum_types.py  test_event_time.py  test_execution_graph.py  test_execution_vertex.py  test_failover_scheduler.py  test_failover_supervisor.py  test_filesystem_sink_options.py  (+61 more)
tests/unit/integrations/: test_canal_source.py  test_console_sink.py  test_iceberg_sink.py  test_kafka_contract.py  test_kafka_sink.py  test_kafka_source.py  test_rocketmq_contract.py  test_rocketmq_source.py  test_sql_sink.py  test_streaming_file_sink.py
(+354 files in other folders)
