# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=83,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-klein"
version = "0.1.0.dev0"
description = "Stateful stream processing for Ray"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "LICENSES/*"]
authors = [{ name = "Klein for Ray Authors" }]
keywords = ["ray", "stream-processing", "batch-processing", "data", "distributed-computing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "click>=8.1",
  "numpy>=1.24,<3",
  "pandas>=1.5,<3",
  "pyarrow>=14",
  "protobuf>=3.20.3,<7",
  "PyYAML>=6",
  "ray[data]>=2.56.1,<2.57",
  "rich>=13",
  "sqlglot>=30.12,<31",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3,<3"]
rocketmq = ["rocketmq-client-python>=2,<3"]
redis = ["redis>=5,<7"]
rocksdb = ["rocksdict>=0.3.29,<0.4"]
serve = [
  "aiohttp>=3.13.3",
  "orjson>=3.9",
  "ray[serve]>=2.56.1,<2.57",
]
all = [
  "aiohttp>=3.13.3",
  "confluent-kafka>=2.3,<3",
  "orjson>=3.9",
  "ray[serve]>=2.56.1,<2.57",
  "redis>=5,<7",
  "rocksdict>=0.3.29,<0.4",
  "rocketmq-client-python>=2,<3",
]
test = [
  "build>=1.2,<2",
  "licensecheck>=2025.1,<2027",
  "pip-audit>=2.7,<3",
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<2",
  "pytest-cov>=5,<8",
  "pytest-timeout>=2.3,<3",
  "reuse>=5,<7",
  "setuptools>=83,<84",
  "testcontainers[kafka,redis]>=4.13,<5",
  "twine>=5,<7",
]
dev = [
  "ray-klein[all,docs,test]",
  "pre-commit>=3.7",
  "ruff>=0.15.22,<0.16",
]
docs = [
  "myst-parser==2.0.0",
  "pydata-sphinx-theme==0.14.1",
  "sphinx==7.3.7",
  "sphinx-copybutton==0.5.2",
  "sphinx-design==0.5.0",
  "sphinxcontrib-mermaid==2.0.3",
]

[project.scripts]
ray-klein = "ray.klein.cli:klein_cli_group"

[project.urls]
Homepage = "https://github.com/yuchen-ecnu/klein"
Documentation = "https://yuchen-ecnu.github.io/klein/"
Repository = "https://github.com/yuchen-ecnu/klein.git"
Issues = "https://github.com/yuchen-ecnu/klein/issues"
Changelog = "https://github.com/yuchen-ecnu/klein/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ray.klein*"]
namespaces = true

[tool.setuptools.package-data]
"ray.klein" = ["py.typed"]
"ray.klein._internal" = ["logging.yaml"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --import-mode=importlib"
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 120
xfail_strict = true
required_plugins = ["pytest-asyncio>=0.23", "pytest-timeout>=2.3"]
markers = [
  "integration: exercises a managed local Ray cluster",
  "external: requires Docker or an external service and is opt-in",
  "slow: takes more than a few seconds",
  "component_core: public API, configuration, graph, and architecture contracts",
  "component_runtime: actor runtime, scheduling, data plane, and failover",
  "component_state: managed state, event time, checkpoints, and recovery",
  "component_sql: batch and streaming SQL planning and execution",
  "component_connectors: filesystem, Kafka, Redis, RocketMQ, and SQL connectors",
]
filterwarnings = [
  "error",
  "error::pytest.PytestUnraisableExceptionWarning",
  "ignore:.*pkg_resources.*:DeprecationWarning",
  "ignore:The @wait_container_is_ready decorator is deprecated.*:DeprecationWarning:testcontainers\\.core\\.waiting_utils",
  "ignore:Using extra keyword arguments on `Field` is deprecated.*:DeprecationWarning:ray.serve._private.config",
  "ignore:`use_push_based_shuffle` is deprecated.*:DeprecationWarning:ray.data.context",
  "ignore:`use_polars` is deprecated.*:DeprecationWarning:ray.data.context",
  "ignore:`use_arrow_tensor_v2` is deprecated.*:DeprecationWarning:ray.data.context",
  "ignore:Use 'expr' instead of 'fn'.*:UserWarning:ray.data.dataset",
  "ignore:unclosed file .*ray-data-dataset.*:ResourceWarning:ray.data._internal.execution.streaming_executor",
  "ignore:.*ray-data-dataset.*:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source = ["ray.klein"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 65

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "ANN201",
  "ANN202",
  "ANN204",
  "ANN205",
  "B",
  "C4",
  "C901",
  "DTZ",
  "FLY",
  "N",
  "PERF",
  "PIE",
  "PTH",
  "RET",
  "RSE",
  "SIM",
  "UP",
  "RUF012",
  "RUF013",
  "RUF021",
  "RUF043",
  "RUF100",
]
# Exceptions inside retry/rollback loops are intentional control boundaries.
ignore = ["B008", "E501", "PERF203"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN201", "ANN202", "ANN204", "ANN205", "B017"]
